# QtReco-Client

./: CMakeLists.txt  OnlineMonitorClient.pro  QtReco-ClientConfig.cmake  QtReco-ClientConfigVersion.cmake  README.md  README.txt
cmake/: FindROOT.cmake  MacroCheckPackageLibs.cmake  MacroCheckPackageVersion.cmake  QTRECO_CLIENTConfig.cmake.in  QtReco-ClientConfig.cmake.in  QtReco-ClientConfig.h.cmake.in  QtReco-ClientConfigVersion.cmake.in
doc/: CMakeLists.txt  Doxyfile
include/: GuiClient.h  QCanvasWidget.h  TCPClient.h
source/: CMakeLists.txt
source/include/: GuiClient.h  Logger.h  QRootCanvas.h  QtReco-ClientConfig.h  TCPClient.h
source/main/: QtReco_Client.cpp
source/src/: GuiClient.cpp  Logger.cpp  QCanvasWidget.cpp  TCPClient.cpp
src/: GuiClient.cpp  QRootCanvas.cpp  TCPClient.cpp  main.cpp
ui/: GuiClient.ui
